frontend/css/room.css
/* Suggested order:
 * display
 * list-style
 * position
 * float
 * clear
 * width
 * height
 * margin
 * padding
 * border
 * background
 * color
 * font
 * text-align
 * overflow-y
 * border-radius
 * box-shadow
 */

body {
    background: white;
    color: black;
}

#header {
    position: fixed;
    width: 100%;
    height: 30px;
    background: black;
    color: white;
    font: bold 25px/32px "メイリオ","Meiryo";
    box-shadow: 10px 10px 10px rgba(0,0,0,0.25);
}

#header a {
    color: white;
}

#title {
    float: left;
    width: 200px;
    text-align: center;
}

#room-name {
    float: left;
    width: 200px;
}

#wrapper {
    width: 1100px;
    height: 645px;
    margin: auto;
    padding: 45px 0 0 0;
}

#login {
    width: 994px;
    margin: 0 auto 0 auto;
}

#login-left {
    float: left;
    width: 490px;
}

#login-input-uid {
    float: left;
    width: 170px;
    height: 26px;
    margin: 35px 0 0 100px;
    border: 2px black solid;
    font: 20px "メイリオ","Meiryo";
    border-radius: 5px;
}

#login-button {
    float: left;
    width: 100px;
    height: 100px;
    margin: 0 0 0 25px;
    background: url(../png/login.png);
}

#login-button:hover {
    opacity: 0.7;
}

#login-error {
    padding: 10px 0 10px 0;
    color: red;
    font: bold 16px "メイリオ","Meiryo";
    text-align: center;
}
#isAuth {
    padding: 10px 0 10px 0;
    color: black;
    font: bold 14px "メイリオ","Meiryo";
    text-align: left;
}

#login-user-list {
    margin: 0 0 0 86px;
    font: 16px "メイリオ","Meiryo";
}

#login-eye-catch {
    float: left;
    width: 504px;
    height: 600px;
    background: url(../png/ship.png);
}

#play {
    display: none;
    width: 1204px;
    margin: 0 auto 0 auto;
}

#play-button-se {
    float: left;
    width: 80px;
    height: 25px;
    background: orange;
    color: white;
    font: bold 20px/28px "メイリオ","Meiryo";
    text-align: center;
    border-radius: 5px;
}

#play-button-bs {
    float: left;
    width: 80px;
    height: 25px;
    margin: 0 0 0 5px;
    background: orange;
    color: white;
    font: bold 20px/28px "メイリオ","Meiryo";
    text-align: center;
    border-radius: 5px;
}

#play-select-volume {
    float: left;
    width: 80px;
    height: 25px;
    margin: 0 0 0 5px;
    font: 16px/24px "メイリオ","Meiryo";
    text-align: center;
    border-radius: 5px;
}

#play-left {
    float: left;
    width: 195px;
}

#play-user-list {
    width: 191px;
    height: 153px;
    margin: 3px 0 0 0;
    padding: 2px;
    background: black;
    color: white;
    overflow: scroll;
}

#play-log {
    width: 191px;
    height: 378px;
    margin: 5px 0 0 0;
    padding: 2px;
    background: black;
    color: white;
    overflow: scroll;
}

#play-view {
    float: left;
    width: 1000px;
    height: 545px;
    margin: 3px 0 0 5px;
}

.play-view-long {
    height: 785px !important;
}
.play-log-long {
    height: 618px !important;
}

#mention {
    float: left;
    width: 95px;
    height: 25px;
    margin: 3px 0 0 0;
    border: 2px black solid;
    font: 18px "メイリオ","Meiryo";
}

#mention-desc {
    float: left;
    content: "@";
    margin: 3px 0 0 0;
    font: 18px "メイリオ","Meiryo"; 
}

#play-input-chat {
    float: left;
    width: 715px;
    height: 25px;
    margin: 3px 0 0 1px;
    border: 2px black solid;
    font: 18px "メイリオ","Meiryo";
}

#play-button-dice {
    float: left;
    width: 70px;
    height: 25px;
    margin: 5px 0 0 5px;
    background: green;
    color: white;
    font: bold 20px/28px "メイリオ","Meiryo";
    text-align: center;
    border-radius: 5px;
}

#play-button-bell, #button-view-log {
    float: left;
    width: 50px;
    height: 25px;
    margin: 5px 0 0 5px;
    background: green;
    color: white;
    font: bold 20px/28px "メイリオ","Meiryo";
    text-align: center;
    border-radius: 5px;
}

#kishi-tobasu {
    float: left;
    width: 50px;
    height: 25px;
    margin: 5px 0 0 5px;
    background: green;
    color: white;
    font: bold 20px/28px "メイリオ","Meiryo";
    text-align: center;
    border-radius: 5px;
}

/* #footer {
    width: 100%;
    height: 400px;
} */

#footer {
    margin-top: 10px;
    width: 100%;
    height: 50vh;
}

#support-browser {
    width: 850px;
    margin: 0 auto 0 auto;
    padding: 10px 0 0 0;
    font: bold 20px "メイリオ","Meiryo";
    text-align: center;
}

#twitter {
    width: 90px;
    margin: 0 auto 0 auto;
    padding: 10px 0 0 0;
}

.button:hover {
    opacity: 0.7;
}

.user {
    height: 18px;
    margin: 0 0 2px 0;
    font: bold 12px "メイリオ","Meiryo";
}

.chat {
    margin: 0 0 2px 0;
    font: bold 12px "メイリオ","Meiryo";
}

.owner-icon {
    float: left;
    width: 14px;
    height: 18px;
    background: url(../png/owner-icon.png);
}

.common-icon {
    float: left;
    width: 14px;
    height: 18px;
}

.my-icon {
    float: left;
    width: 14px;
    height: 18px;
    background: url(../png/my-icon.png);
}

.user-icon {
    float: left;
    width: 14px;
    height: 18px;
    background: url(../png/user-icon.png);
}

.uid {
    padding: 0 2px 0 2px;
    background: gray;
    color: white;
    border-radius: 5px;
}

.trip {
    padding: 0 2px 0 2px;
    background: green;
    color: white;
    border-radius: 5px;
}

#help, #log-view {
    width:80%;
    height: 100%;
    margin:auto;
    /* padding: 45px 0 0 0; */
    background:#fff;
    display: none;
}

#help-button {
    float: left;
    width: 70px;
    height: 25px;
    margin: 5px 0 0 5px;
    background: green;
    color: white;
    font: bold 20px/28px "メイリオ","Meiryo";
    text-align: center;
    border-radius: 5px;
}

.command {
    margin-top: 10px;
}

.commandButton {
    float: left;
    width: 7em;
    height: 25px;
    margin: 5px 0 0 5px;
    color: white;
    font: bold 20px/28px "メイリオ", "Meiryo";
    text-align: center;
    border-radius: 5px;
}

.basicCommand {
    background: gray;
}

.reset {
    background: rgb(195, 58, 58);
}

